Playlist card and playlist listing from local storage

--- a/src/Colorschemes/Dracula.css
+++ b/src/Colorschemes/Dracula.css
@@ -18,6 +18,7 @@
   --color7: #bfbfbf;
   --color15: #e6e6e6;
   --black: #21222c;
+  --black-1: #1d1f27;
   --blackSecondary: #414558;
   --blackTernary: #a7abbe;
   --blackLight: hsla(230, 15%, 15%, 5%);
