--- a/src/Components/HomeScreenCard/index.css
+++ b/src/Components/HomeScreenCard/index.css
@@ -10,7 +10,7 @@
   padding: 20px;
   text-align: center;
   transition: all 0.3s ease;
-  display: inline-block
+  display: inline-block;
 }
 
 .HomeScreenCard:hover {
