--- a/src/Pages/HomePage/index.css
+++ b/src/Pages/HomePage/index.css
@@ -30,3 +30,9 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 1rem;
 }
+
+.HomeCards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 1rem;
+}
