--- a/src/Pages/PlaylistPage/index.css
+++ b/src/Pages/PlaylistPage/index.css
@@ -10,6 +10,7 @@
   margin-bottom: 2rem;
   overflow: auto;
   overflow-x: hidden;
+  transition: all 0.3s ease-in-out;
 }
 
 .PlaylistHeader img {
@@ -27,6 +28,46 @@
   grid-area: x;
   margin: 0 0.5rem;
   margin-bottom: 1rem;
+}
+
+.PlaylistButtons {
+  grid-area: t;
+  margin: 0 0.5rem;
+}
+
+.PlayButton {
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  background: none;
+  background-color: var(--green);
+  transition: all 0.3s ease-in-out;
+  vertical-align: middle;
+  text-align: center;
+  display: inline-block;
+}
+
+.PlayButton:hover {
+  color: var(--green);
+}
+
+.ShareButton {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  background: none;
+  background-color: var(--background);
+  color: var(--foreground);
+  transition: all 0.3s ease-in-out;
+  vertical-align: middle;
+  text-align: center;
+  display: inline-block;
+  margin-left: 1rem;
+}
+
+.ShareButton:hover {
+  color: var(--background);
+  background-color: var(--accentColor);
 }
 
 .Thumbnail {
