--- a/src/Components/CircularButton/index.css
+++ b/src/Components/CircularButton/index.css
@@ -1,6 +1,7 @@
 @import url("../../Styles/button.css");
 
 .CircularButton {
+  /*
   border-radius: 50%;
   width: 2.25rem;
   height: 2.25rem;
@@ -8,9 +9,35 @@
   color: var(--blackTernary);
   background-color: var(--background);
   transition: all 0.3s ease-in-out;
+  padding: 0;
+  position: relative;
+*/
+
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
   vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
   text-align: center;
-  display: inline-block;
+  flex: 0 0 auto;
+  border-radius: 50%;
+  overflow: visible;
+  color: rgb(255, 255, 255);
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  padding: 12px;
+  font-size: 1.75rem;
 }
 
 .CircularButton:hover {
