--- a/src/Components/PlaylistCard/index.css
+++ b/src/Components/PlaylistCard/index.css
@@ -34,6 +34,9 @@
 .PlaylistCardThumbnailOverlay button {
   transform: scale(0);
   box-shadow: 0px 0px 5px var(--black);
+  height: 3rem;
+  width: 3rem;
+  background-color: var(--accentColor) !important;
 }
 
 .PlaylistCard:hover .PlaylistCardThumbnailOverlay button {
