--- a/src/Pages/PlaylistPage/index.css
+++ b/src/Pages/PlaylistPage/index.css
@@ -1,3 +1,8 @@
+.PlaylistPage {
+  height: 80vh;
+  overflow: auto;
+}
+
 .PlaylistHeader {
   padding: 2rem 3rem;
   display: grid;
@@ -76,6 +81,10 @@
   box-shadow: 0px 0px 10px var(--black);
 }
 
+.PlaylistContent {
+  padding: 2rem;
+}
+
 ::-webkit-scrollbar {
   width: 0.5rem;
 }
@@ -94,4 +103,27 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--black);
+}
+
+.eee {
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  outline: 0px;
+  border: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  text-align: center;
+  flex: 0 0 auto;
+  border-radius: 50%;
+  overflow: visible;
+  padding: 12px;
+  font-size: 1.75rem;
 }
