--- a/src/Components/Drawer/index.css
+++ b/src/Components/Drawer/index.css
@@ -2,10 +2,27 @@
   padding: 0.5rem;
 }
 
+.DrawerItem {
+  margin: 0.5rem auto !important;
+}
+
 .DrawerItemText {
   margin: 0 0.5rem;
+  padding: 0;
 }
 
 .Drawer a {
   text-decoration: none;
+}
+
+.DrawerContentGrid {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-gap: 0.5rem;
+  place-content: center;
+  place-items: center;
+}
+
+.DrawerContentGrid span {
+  width: 100%;
 }
