--- a/src/Components/DrawerItem/index.css
+++ b/src/Components/DrawerItem/index.css
@@ -1,17 +1,13 @@
 @import url("../../root.css");
 
 .DrawerItem {
-  padding: 2px;
-}
-
-.DrawerItemContent {
   padding: 0.5rem;
   border-radius: 0.5rem;
   transition: all 0.2s ease-in-out;
   color: var(--color15);
 }
 
-.DrawerItemContent:hover {
+.DrawerItem:hover {
   background-color: var(--accentColor);
   color: var(--black);
 }
