--- a/src/Components/SearchBar/index.css
+++ b/src/Components/SearchBar/index.css
@@ -1,10 +1,10 @@
 .SearchBar {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .SearchBar input {
-	margin: 0 auto
-} 
+  margin: 0 auto;
+}
