--- a/src/root.css
+++ b/src/root.css
@@ -1,9 +1,9 @@
 @import url("./Colorschemes/Dracula.css");
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Fira+Sans&family=Roboto:wght@300;400&family=Rubik&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Fira+Sans&family=Roboto:wght@300;400&family=Rubik&display=swap");
 
 :root {
-	font-size: 16px;
-	--border-radius: 5px;
+  font-size: 16px;
+  --border-radius: 5px;
 }
 
 * {
