--- a/src/Pages/PlaylistPage/index.css
+++ b/src/Pages/PlaylistPage/index.css
@@ -27,8 +27,10 @@
 
 .PlaylistHeader h1 {
   grid-area: c;
-  font-size: 700%;
-  margin: 0.2rem 0;
+  font-size: 500%;
+  margin: 0.1rem 0;
+  margin-bottom: 0;
+  white-space: nowrap;
 }
 
 .PlaylistHeader p {
