--- a/src/Pages/SearchPage/index.css
+++ b/src/Pages/SearchPage/index.css
@@ -33,3 +33,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background: var(--black);
 }
+
+::-webkit-scrollbar-corner {
+  background-color: var(--black);
+}
