--- a/src/Components/CurrentlyPlayingInfo/index.css
+++ b/src/Components/CurrentlyPlayingInfo/index.css
@@ -4,6 +4,28 @@
   height: 15vh;
 }
 
+.VolumeControls {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  height: 15vh;
+  width: 100%;
+}
+
+.VolumeControlsVertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.VolumeSlider {
+  margin: auto 1rem;
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 .CurrentlyPlayingInfo div {
   margin: auto 1rem;
 }
